# python-project-50

./: Makefile  README.md  coverage.json  gendiff.py  gendiff_plain.py  gendiff_stylish.py  pyproject.toml  test_gendiff.py  worktest_gendiff.py
.github/workflows/: github-actions.yml
gendiff/: __init__.py  app.py  gendiff_json.py  gendiff_plain.py  gendiff_stylish.py  gendiff_work.py
hexlet-code/: __init__.py
hexlet_code/: __init__.py
tests/: test_gendiff.py  test_gendiff_yml.py
tests/fixtures/: expected_result_dict.txt  file1.json  result_test_gendiff.txt
