[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Nik Sizov <wwwwwwwww@list.ru>"]
readme = "README.md"
packages = [{include = "hexlet_code"}]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.scripts]
gendiff = "hexlet-code:main"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
